--- a/styles/telasPag.css
+++ b/styles/telasPag.css
@@ -2,8 +2,7 @@
     background-color: white;
 }
 
-.b2{
-   
+.b2 {
 }
 
 label {
@@ -15,6 +14,12 @@ label {
 input {
     width: 40%;
 }
+
+    input[type=button] {
+        border: none;
+        background-color: #4CAF50;
+        width: 50px;
+    }
 
     input[type=text], [type=email], [type=date], [type=password], [type=tel] {
         width: 60%;
@@ -81,9 +86,8 @@ img {
     float: right;
 }
 
-.img2{
+.img2 {
     float: left;
-
 }
 
 .p {
@@ -149,6 +153,7 @@ img {
     display: inline-block;
     color: #FFFFFF;
     font-size: 15px;
+    font-size: 15px;
     padding: 20px;
     width: 400px;
     transition: all 0.5s;
@@ -183,3 +188,33 @@ img {
             right: 0;
             color: #ff6a00;
         }
+
+.espaco {
+    padding: 20px;
+    line-height: 1.3;
+}
+
+.menu {
+    overflow: hidden;
+    background-image: url('../Images/WhatsApp Image 2020-10-18 at 19.14.35.jpeg');
+}
+
+    .menu a {
+        float: left;
+        display: inline-block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 50px 16px;
+        text-decoration: none;
+        width: 200px;
+    }
+
+        .menu a:hover {
+            color: white;
+        }
+
+.fundo {
+    opacity: 0.8;
+    width: 100%;
+    background-image: url('../Images/fundo.jpg');
+}
